Tested `RouteFailResponse`